charts/vintage-story/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gaming
  labels:
    kubernetes.io/metadata.name: gaming
