charts/vintage-story/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vintage-story-server
  namespace: gaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vintage-story
  template:
    metadata:
      labels:
        app: vintage-story
    spec:
      containers:
        - name: game-server
          image: ghcr.io/darkmatterproductions/vintagestory:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "3Gi"
              cpu: "2"
            limits:
              memory: "8Gi"
              cpu: "4"
          volumeMounts:
            - name: data-volume
              mountPath: /vintagestory/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: vintage-story-longhorn-pvc
        - name: serverconfig-seed
          configMap:
            name: vintage-story-serverconfig
            items:
              - key: serverconfig.json
                path: serverconfig.json
