charts/vintage-story/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vintage-story-network-policy
  namespace: gaming
spec:
  podSelector:
    matchLabels:
      app: vintage-story
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: edge-gateway
      ports:
        - protocol: TCP
          port: 42420
        - protocol: UDP
          port: 42420
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - ports:
        - protocol: TCP
          port: 443
